style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  text-decoration: none;
  font-family: "Inter", sans-serif;
}

li {
  list-style: none;
}

a {
  color: #28352f;
  text-decoration: none;
}

header {
  display: flex;
  justify-content: space-between;
  margin: 20px 20px 0 20px;
  line-height: 52px;
}

.logo {
  color: #28352f;
  font-weight: 500;
  font-size: 20px;
  width: 90px;
  height: 28px;
  cursor: pointer;
}

.intro {
  background-image: url(./images/home.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 20px 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.about {
  font-size: 40px;
  margin-top: 30px;
  margin-right: 14px;
  text-align: center;
  padding-left: 2px;
  color: #1a1f1d;
}

h1 span {
  color: #58b68f;
  font-weight: 700;
  line-height: 52px;
  font-size: 40px;
}

.introduction {
  color: #3b4c69;
  text-align: center;
  font-size: 20px;
  line-height: 28px;
  margin-top: 35px;
  margin-bottom: 50px;
  padding: 0 18px;
}

.page-links {
  display: flex;
  justify-content: center;
  font-size: 23px;
}

.page-links li {
  margin-right: 19px;
}

.my-projects {
  padding: 15px;
  margin: 20px;
}

.down-arrow {
  display: flex;
  justify-content: center;
  margin-bottom: 15px;
}

.title {
  display: flex;
  justify-content: center;
  margin: 10px;
}

.line {
  display: flex;
  justify-content: center;
  margin: 20px;
}

.project-container {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 20px;
}

.single-project {
  height: 474px;
  width: 327px;
  border-radius: 8px;
  border: 2px solid #ebf0ee;
  margin: 5px -10px;
}

.single-project img {
  width: 100%;
  height: 55%;
}

.single-project .project-title {
  display: flex;
  justify-content: center;
  margin: 12px;
}

.single-project .project-title h4 {
  text-align: center;
  font-weight: 600;
  font-size: 24px;
  line-height: 30px;
  color: #3a4a42;
}

.tech-stack {
  display: inline-block;
}

.tech-stack li {
  float: left;
  padding: 8px;
  margin: 5px;
  border-radius: 4px;
  font-size: 12px;
  line-height: 16px;
  font-weight: 600;
  background: #ebf0ee;
  color: #3a4a42;
}

.btn {
  display: flex;
  justify-content: center;
  margin: 22px;
}

.btn button {
  background: #36b37f;
  font-weight: 500;
  border-radius: 8px;
  border: none;
  color: #fff;
  padding: 15px 20px;
  outline: none;
  font-size: 17px;
  line-height: 24px;
}

.btn button:hover {
  background-color: #1e2e27;
  cursor: pointer;
}

.btn button:active {
  background-color: rgb(172, 31, 31);
  color: white;
}

.btn button:disabled {
  background-color: yellowgreen;
  color: yellowgreen;
}

.heading {
  color: #172b4d;
  font-size: 40px;
  font-weight: 700;
  line-height: 107%;
  text-align: center;
}

.information {
  display: flex;
  justify-content: center;
  margin: 15px;
}

.information p {
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  height: 189px;
  width: 351px;
  color: #42526e;
}

.about-me {
  background-image: url(./images/shot1.svg), url(./images/shot2.svg);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 30px;
  background-repeat: no-repeat, no-repeat;
  background-position: top right, bottom left;
  width: 100%;
  position: relative;
}

.coding-language {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 352px;
  width: 327px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  margin-top: 24px;
  background: #ebf0ee;
}

.language {
  display: flex;
  justify-content: center;
}

.stack-btn {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.stack-btn li {
  margin-right: 12px;
}

.one {
  color: #344563;
  text-align: center;
  margin-bottom: 12px;
}

.list {
  flex-wrap: wrap;
  background-color: #fff;
  color: #36b37e;
  border: none;
  border-radius: 4px;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  padding: 6px 10px;
  margin-right: 8px;
  margin-bottom: 29px;
  letter-spacing: 1px;
}

.my-stack {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-bottom: 8px;
  background-color: #ebf0ee;
}

.contact {
  background: no-repeat 100% 90% url(./images/illustration-contact-form.png);
  transform: translateX(20px);
  width: 375px;
  height: 879px;
  padding: 64px 24px 64px 24px;
}

.contact h3 {
  height: 363px;
  width: 327px;
  font-size: 40px;
  font-weight: 700;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
}

input {
  height: 48px;
  width: 327px;
  border-radius: 4px;
  margin-top: 20px;
  padding: 15px;
}

textarea {
  height: 114px;
  width: 327px;
  border-radius: 4px;
  margin-top: 20px;
  padding: 15px;
  color: #091e42;
  font-size: 15px;
  line-height: 24px;
  font-weight: 400;
}

.btn-green {
  background-color: #36b37f;
  height: 48px;
  width: 129px;
  border-radius: 4px;
  padding: 12px;
  transform: translateX(100px);
  color: white;
  font-size: 17px;
  font-weight: 500;
  line-height: 24px;
  text-align: center;
}

